k8s/manifests/network-system/ingress-nginx/static-routes/hyperion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hyperion
  namespace: network-system
spec:
  type: ExternalName

  ports:
    - name: https
      port: 5001

  externalName: hyperion.${INTERNAL_DOMAIN}
