k8s/manifests/network-system/ingress-nginx/static-routes/hyperion/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyperion
  namespace: network-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: "server"
    hajimari.io/appName: "hyperion"

spec:
  tls:
    - secretName: hyperion-${CLUSTER_NAME}-tls
      hosts:
        - "hyperion.${EXTERNAL_DOMAIN}"

  rules:
    - host: hyperion.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hyperion
                port:
                  name: https
